_forms.pyx added

--- a/examples/schroedinger/CMakeLists.txt
+++ b/examples/schroedinger/CMakeLists.txt
@@ -9,3 +9,7 @@ add_executable(${PROJECT_NAME} main.cpp forms.cpp)
 include(../CMake.common)
 target_link_libraries(${PROJECT_NAME} ${PYTHON_LIBRARIES})
 add_dependencies(${PROJECT_NAME} _hermes1d)
+
+SET(CYTHON_INCLUDE_DIRECTORIES . -I../../hermes_common/
+    -I../../python/hermes1d/)
+cython_add_module(_forms)
