--- a/examples/schroedinger/CMakeLists.txt
+++ b/examples/schroedinger/CMakeLists.txt
@@ -5,10 +5,11 @@ find_package(PythonLibs REQUIRED)
 include_directories(${PYTHON_INCLUDE_PATH} ${NUMPY_INCLUDE_PATH})
 include_directories(${hermes1d_SOURCE_DIR}/python/hermes1d/h1d_wrapper/)
 
-add_executable(${PROJECT_NAME} main.cpp forms.cpp)
+set(cppschroedinger ${PROJECT_NAME})
+add_executable(${cppschroedinger} main.cpp forms.cpp)
 include(../CMake.common)
-target_link_libraries(${PROJECT_NAME} ${PYTHON_LIBRARIES})
-add_dependencies(${PROJECT_NAME} _hermes1d)
+target_link_libraries(${cppschroedinger} ${PYTHON_LIBRARIES})
+add_dependencies(${cppschroedinger} _hermes1d)
 
 SET(CYTHON_INCLUDE_DIRECTORIES . -I../../hermes_common/
     -I../../python/)
