Fix examples to work again

--- a/examples/schroedinger/CMakeLists.txt
+++ b/examples/schroedinger/CMakeLists.txt
@@ -11,7 +11,6 @@ include(../CMake.common)
 target_link_libraries(${cppschroedinger} ${PYTHON_LIBRARIES})
 add_dependencies(${cppschroedinger} _hermes1d)
 
-SET(CYTHON_INCLUDE_DIRECTORIES . -I../../hermes_common/
-    -I../../python/)
+SET(CYTHON_INCLUDE_DIRECTORIES . -I../../hermes_common/ -I../../)
 cython_add_module(_forms forms.cpp)
 target_link_libraries(_forms ${HERMES_BIN})
