Add global L2 and H1 projections
Add L2/H1_projection_biform() and L2/H1_projection_liform() functions.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,6 +2,7 @@ set(SRC
     common.cpp iterator.cpp qsort.cpp
     lobatto.cpp legendre.cpp
     discrete.cpp solution.cpp mesh.cpp
+    projection.cpp
     linearizer.cpp quad_std.cpp transforms.cpp
     adapt.cpp graph.cpp h1_polys.cpp
     )
